[gd_scene load_steps=9 format=2]

[ext_resource path="res://Images/heart-void.png" type="Texture" id=1]
[ext_resource path="res://Images/keys-void.png" type="Texture" id=2]
[ext_resource path="res://Images/heart-full.png" type="Texture" id=3]
[ext_resource path="res://Images/keys-4.png" type="Texture" id=4]
[ext_resource path="res://Images/keys-2.png" type="Texture" id=5]
[ext_resource path="res://Images/keys-3.png" type="Texture" id=6]
[ext_resource path="res://Images/keys-1.png" type="Texture" id=7]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=8]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -536.0

[node name="Holder" type="Control" parent="HBoxContainer"]
margin_bottom = 64.0
script = ExtResource( 8 )

[node name="base-void" type="Control" parent="HBoxContainer/Holder"]
margin_right = 40.0
margin_bottom = 40.0

[node name="heart-void1" type="TextureRect" parent="HBoxContainer/Holder/base-void"]
margin_left = 8.0
margin_top = 8.0
margin_right = 56.0
margin_bottom = 56.0
texture = ExtResource( 1 )
expand = true

[node name="heart-void2" type="TextureRect" parent="HBoxContainer/Holder/base-void"]
margin_left = 48.0
margin_top = 8.0
margin_right = 96.0
margin_bottom = 56.0
texture = ExtResource( 1 )
expand = true

[node name="heart-void3" type="TextureRect" parent="HBoxContainer/Holder/base-void"]
margin_left = 88.0
margin_top = 8.0
margin_right = 136.0
margin_bottom = 56.0
texture = ExtResource( 1 )
expand = true

[node name="heart-void4" type="TextureRect" parent="HBoxContainer/Holder/base-void"]
margin_left = 128.0
margin_top = 8.0
margin_right = 176.0
margin_bottom = 56.0
texture = ExtResource( 1 )
expand = true

[node name="heart-void5" type="TextureRect" parent="HBoxContainer/Holder/base-void"]
margin_left = 168.0
margin_top = 8.0
margin_right = 216.0
margin_bottom = 56.0
texture = ExtResource( 1 )
expand = true

[node name="heart-void6" type="TextureRect" parent="HBoxContainer/Holder/base-void"]
margin_left = 208.0
margin_top = 8.0
margin_right = 256.0
margin_bottom = 56.0
texture = ExtResource( 1 )
expand = true

[node name="keys void" type="TextureRect" parent="HBoxContainer/Holder/base-void"]
margin_left = 848.0
margin_top = 16.0
margin_right = 944.0
margin_bottom = 64.0
texture = ExtResource( 2 )
expand = true

[node name="base-full" type="Control" parent="HBoxContainer/Holder"]
margin_right = 40.0
margin_bottom = 40.0

[node name="heart-full1" type="TextureRect" parent="HBoxContainer/Holder/base-full"]
margin_left = 8.0
margin_top = 8.0
margin_right = 56.0
margin_bottom = 56.0
texture = ExtResource( 3 )
expand = true

[node name="heart-full2" type="TextureRect" parent="HBoxContainer/Holder/base-full"]
margin_left = 48.0
margin_top = 8.0
margin_right = 96.0
margin_bottom = 56.0
texture = ExtResource( 3 )
expand = true

[node name="heart-full3" type="TextureRect" parent="HBoxContainer/Holder/base-full"]
margin_left = 88.0
margin_top = 8.0
margin_right = 136.0
margin_bottom = 56.0
texture = ExtResource( 3 )
expand = true

[node name="heart-full4" type="TextureRect" parent="HBoxContainer/Holder/base-full"]
margin_left = 128.0
margin_top = 8.0
margin_right = 176.0
margin_bottom = 56.0
texture = ExtResource( 3 )
expand = true

[node name="heart-full5" type="TextureRect" parent="HBoxContainer/Holder/base-full"]
margin_left = 168.0
margin_top = 8.0
margin_right = 216.0
margin_bottom = 56.0
texture = ExtResource( 3 )
expand = true

[node name="heart-full6" type="TextureRect" parent="HBoxContainer/Holder/base-full"]
margin_left = 208.0
margin_top = 8.0
margin_right = 256.0
margin_bottom = 56.0
texture = ExtResource( 3 )
expand = true

[node name="key1" type="TextureRect" parent="HBoxContainer/Holder/base-full"]
margin_left = 848.0
margin_top = 16.0
margin_right = 944.0
margin_bottom = 64.0
texture = ExtResource( 7 )
expand = true

[node name="key2" type="TextureRect" parent="HBoxContainer/Holder/base-full"]
margin_left = 848.0
margin_top = 16.0
margin_right = 944.0
margin_bottom = 64.0
texture = ExtResource( 5 )
expand = true

[node name="key3" type="TextureRect" parent="HBoxContainer/Holder/base-full"]
margin_left = 848.0
margin_top = 16.0
margin_right = 944.0
margin_bottom = 64.0
texture = ExtResource( 6 )
expand = true

[node name="key4" type="TextureRect" parent="HBoxContainer/Holder/base-full"]
margin_left = 848.0
margin_top = 16.0
margin_right = 944.0
margin_bottom = 64.0
texture = ExtResource( 4 )
expand = true
